namespaces/code/code-server/spec-patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: srv
spec:
  template:

    # metadata:
    #   annotations:
    #     vk.podman.io/volume-selinux.code: relabel-shared
    #     vk.podman.io/volume-selinux.linuxbrew: relabel-shared

    spec:

      serviceAccountName: srv

      containers:
      - name: srv
        image: linuxserver/code-server

        # fixes sudo/su. https://github.com/cri-o/cri-o/issues/3803
        securityContext:
          capabilities:
            add:
              - AUDIT_WRITE

        ports:
        - containerPort: 8443
          name: http
          protocol: TCP

        resources:
          requests:
            memory: 1000Mi
            cpu: 50m
          limits:
            memory: 4000Mi
            cpu: 2000m

        volumeMounts:
        - name: config
          mountPath: /config
        - name: code
          mountPath: /code
        - name: linuxbrew
          mountPath: /home/linuxbrew/.linuxbrew

      volumes:
      - name: config
        hostPath:
          path: /home/code/srv/config
          type: Directory
      - name: code
        hostPath:
          path: /home/code/srv/code
          type: Directory
      - name: linuxbrew
        hostPath:
          path: /home/code/srv/linuxbrew
          type: Directory
